Validator implements